# xeno-agent

./: .gitattributes  .gitignore  README.md  app.py  download_models.py  prepare_models.py  pyproject.toml  reset_memory.py
searxng/: limiter.toml  settings.yml
src/conversation_agent/: agent.py  prompts.py
src/conversation_agent/tools/: do_nothing.py  solve_task.py
src/memory_agent/: agent.py  prompts.py
src/memory_agent/tools/: do_nothing.py  save_memory.py
src/proxy_agent/: agent.py  prompts.py
src/proxy_agent/tools/: click_element.py  close_browser_context.py  create_browser_context.py  do_nothing.py  extract_page_content.py  get_dropdown_options.py  go_back.py  go_to_url.py  input_text.py  open_tab.py  run_code.py  scroll_page.py  scroll_to_text.py  search_google.py  select_dropdown_option.py  send_keys.py  switch_tab.py  talk.py  use_terminal.py
src/task_agent/: agent.py  memory.py  messages.py  output_types.py  prompts.py
src/task_agent/tools/: check_terminal_output.py  execute_code.py  python_interpreter.py  search.py  terminal.py  use_browser.py
src/threads/: proxy_agent_thread.py  screen_capture_thread.py  stt_thread.py
src/utils/: audio_player.py  audio_recorder.py  browser.py  db.py  db_models.py  embedding_helper.py  episodic_memory.py  file_storage.py  file_storage_backends.py  llm.py  local_python_interpreter.py  memory_manager.py  messages.py  prepare_models.py  settings_manager.py  stt.py  tool.py  tts.py  types.py
src/utils/audioclip/: __init__.py
src/utils/browser/: context.py  dom.py  history_tree_processor.py  types.py
(+23 files in other folders)
