[project]
name = "xeno-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.1.19",
    "emoji>=2.14.0",
    "faster-whisper>=1.1.1",
    "langchain-community>=0.3.14",
    "langchain>=0.3.14",
    "litellm>=1.57.8",
    "munch>=4.0.0",
    "num2words>=0.5.14",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "phonemizer>=3.3.0",
    "pip>=24.3.1",
    "psutil>=6.1.1",
    "pyside6>=6.8.1.1",
    "pyyaml>=6.0.2",
    "scipy>=1.15.1",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.0",
    "spacy>=3.8.3",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "transformers>=4.48.0",
]

[dependency-groups]
dev = []
